Drag and drop: Adjust destination if the item is no directory or desktop-file

The URL of the view should be used as destination target if a dropping is not
done above a directory or desktop-file.

BUG: 293511
FIXED-IN: 4.8.1